--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -5,13 +5,22 @@ body {
 .binding-container {
   border: black 1px solid;
   margin: 10px;
-  padding: 4px 0px;
+  padding: 4px 4px;
+  position: relative;
+  padding-top: 20px;
+  word-break: break-all;
 }
 
 .binding-container label {
   font-weight: bold;
-  padding: 5px;
-  border-right: black 1px solid;
+  padding: 1px 4px;
+  top:0;
+  left:0;
+  position: absolute;
+  font-size: 12px;
+  text-align: right;
+  display: inline-block;
+  height: 100%;
 }
 
 .binding-container div {
@@ -24,5 +33,22 @@ body {
 }
 
 .binding-container button {
-  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+}
+
+.keybind {
+  display: inline-block;
+  border-radius: 3px;
+  border-style: 1px solid #333;
+  background: linear-gradient(to bottom, rgba(76,76,76,1) 0%,rgba(28,28,28,1) 69%,rgba(19,19,19,1) 100%); /* W3C */
+  color: white;
+  padding:3px;
+}
+
+.keybind:hover {
+  cursor: pointer;
+  background: linear-gradient(to bottom, rgba(19,19,19,1) 0%,rgba(28,28,28,1) 69%, rgba(76,76,76,1) 100%); /* W3C */
 }
