--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -39,6 +39,31 @@ body {
   width: 50px;
 }
 
+.group-container {
+  border: black 1px solid;
+  margin: 10px;
+  padding: 4px 4px;
+  position: relative;
+  padding-top: 20px;
+  word-break: break-all;
+}
+
+.group-container label {
+  font-weight: bold;
+  padding: 1px 4px;
+  top:0;
+  left:0;
+  position: absolute;
+  font-size: 12px;
+  text-align: right;
+  display: inline-block;
+  height: 100%;
+}
+
+.group-container div {
+  display: block;
+}
+
 .keybind {
   display: inline-block;
   border-radius: 3px;
