--- a/app/styles/content.css
+++ b/app/styles/content.css
@@ -1,7 +1,21 @@
 .controller-focus {
     position: fixed;
     pointer-events: none;
+    z-index: 10000000000000000000;
+}
+.player-0 {
+    background: rgba(0, 200, 0, .1);
+    box-shadow: 0px 0px 15px 5px rgba(0, 200, 0, .75) !important;
+}
+.player-1 {
     background: rgba(200, 0, 0, .1);
     box-shadow: 0px 0px 15px 5px rgba(200, 0, 0, .75) !important;
-    z-index: 10000000000000000000;
+}
+.player-2 {
+    background: rgba(0, 0, 200, .1);
+    box-shadow: 0px 0px 15px 5px rgba(0, 0, 200, .75) !important;
+}
+.player-3 {
+    background: rgba(0, 200, 200, .1);
+    box-shadow: 0px 0px 15px 5px rgba(0, 200, 200, .75) !important;
 }
